--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:SV2/ork+kAIYRD/eBqORUMUcAwhp82npUiFm8CfZd5E=
+APP_KEY=base64:6QmjZLIsVyQBEJtbWvbczR73XKCJY0g5oCvMGNrPI+E=
 APP_DEBUG=true
 APP_URL=http://localhost:8080
 
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=superNiceDb
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=laravel
