--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:6QmjZLIsVyQBEJtbWvbczR73XKCJY0g5oCvMGNrPI+E=
+APP_KEY=base64:Q6HfP7R0vl2IlTYwvg3T1mvrdPC9K2JKMQ4QoFDJ4zg=
 APP_DEBUG=true
 APP_URL=http://localhost:8080
 
@@ -8,8 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=superNiceDb
+B_CONNECTION=mysql
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=laravel
