--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:r+TYP6zWWxI62KUqf62gSRYcetIOyu859uhyeW+uU9k=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8080
 
